# elective

./: .client.elective  .gitignore  .pre-commit-config.yaml  LICENSE.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: classes.rst  cli.rst  conf.py  functions.rst  index.rst  license.rst  readme.rst
elective/: __init__.py  cli.py  config.py  config.toml  elective.py  env.py  exceptions.py  files.py  generate.py  state.py  test_cli.py  test_config.py  test_elective.py  test_env.py  test_exceptions.py  test_files.py  test_generate.py  test_state.py  test_util.py  util.py
tests/: test_config.py
