# ******************************************************************************
#
# elective:  a Python configuration loader generator
#
# Copyright 2021 Jeremy A Gray <gray@flyquackswim.com>.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[build-system]

# Setuptools.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Poetry.
# requires = ["poetry_core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]

line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
    \.git
    | \.pytest_cache
    | __pycache__
    | htmlcov
  )/
)
'''

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = false
repair = false

types = [
  "depends",
  "doc",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test",
]

scopes = [
  "cli",
  "module",
  "tooling",
]

footers = [
  "github-closes",
  "signed-off-by",
]

required_footers = [
  "signed-off-by",
]

[tool.poetry]

authors = ["Jeremy A Gray <gray@flyquackswim.com>"]
description = "elective:  a Python configuration loader generator"
name = "elective"
version = "0.1.2"
license = "MIT"
maintainers = ["Jeremy A Gray <gray@flyquackswim.com>"]
readme = "README.rst"
homepage = "https://github.com/jeremyagray/elective"
repository = "https://github.com/jeremyagray/elective"

classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: User Interfaces",
]

packages = [
  { include = "elective" },
]

include = [
  "README.rst",
  "LICENSE.rst",
  "docs/**/*",
]

[tool.poetry.dependencies]

"ruamel.yaml" = "^0"
bespon = "^0.6"
python = ">=3.6.1,<4.0"
toml = "^0"

[tool.poetry.dev-dependencies]

Sphinx = "^3.4"
black = { version = "*", allow-prereleases = true }
factory-boy = "^3.2"
flake8 = "^3.8"
flake8-docstrings = "^1.5"
hypothesis = "^6.9"
isort = "^5.6"
pccc = "^0"
pre-commit = "^2.9"
pydocstyle = "^5.1"
pyfakefs = "^4.3"
pytest = "^6.1"
pytest-cov = "^2.10"
tox = "^3.21"
twine = "^3.3"

[tool.poetry.scripts]

elective = "elective:main"

[tool.poetry.urls]

"Issues" = "https://github.com/jeremyagray/elective/issues"
"Documentation" = "https://elective.readthedocs.io/"
"Repository" = "https://github.com/jeremyagray/elective"

[tool.pytest.ini_options]
