# ******************************************************************************
#
# elective:  a Python configuration loader generator
#
# Copyright 2021-2025 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[build-system]

# Poetry.
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.doc8]

ignore-path = [
  ".tox",
  ".venv",
  "docs/_build",
  "*.egg-info",
]

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = false
repair = false

types = [
  "depends",
  "doc",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test",
]

scopes = [
  "cli",
  "module",
  "tooling",
]

footers = [
  "github-closes",
  "signed-off-by",
]

required_footers = [
  "signed-off-by",
]

[tool.poetry]

authors = ["Jeremy A Gray <gray@flyquackswim.com>"]
description = "elective:  a Python configuration loader generator"
name = "elective"
version = "0.1.2"
license = "MIT"
maintainers = ["Jeremy A Gray <gray@flyquackswim.com>"]
readme = "README.rst"
homepage = "https://github.com/jeremyagray/elective"
repository = "https://github.com/jeremyagray/elective"

classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: User Interfaces",
]

packages = [
  { include = "elective" },
]

include = [
  "README.rst",
  "LICENSE.rst",
  "docs/**/*",
]

[tool.poetry.dependencies]

"ruamel.yaml" = ">=0,<1"
bespon = ">=0,<1"
python = ">=3.11.1,<4.0"
toml = ">=0,<1"

[tool.poetry.group.dev.dependencies]

Sphinx = ">=7"
doc8 = ">=2"
factory-boy = ">=3"
hypothesis = ">=6"
pccc = ">=0"
pre-commit = ">=3"
pyfakefs = ">=5"
pytest = ">=8"
pytest-cov = ">=4"
ruff = ">=0"
tox = ">=4"

[tool.poetry.scripts]

elective = "elective:main"

[tool.poetry.urls]

"Issues" = "https://github.com/jeremyagray/elective/issues"
"Documentation" = "https://elective.readthedocs.io/"
"Repository" = "https://github.com/jeremyagray/elective"

[tool.ruff.lint]

select = [
  "B",
  "C90",
  "D",
  "E",
  "F",
  "I",
  "RUF",
  "S",
  "T20",
  "W",
]

ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = [ "F401" ]

"tests/**/*.py" = [
    "S101",
]

"**/test_*.py" = [
    "S101",
]
