# ******************************************************************************
#
# elective:  a Python configuration loader generator
#
# Copyright 2021 Jeremy A Gray <gray@flyquackswim.com>.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[flake8]

max-complexity = 20
max-line-length = 88
extend-ignore =
  E203, W503
  __init__.py F401

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = python program configuration option loader
license = MIT License
license_file = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = elective
url = https://github.com/jeremyagray/elective
version = 0.1.2

project_urls =
  Issues = https://github.com/jeremyagray/elective/issues
  Documentation = https://elective.readthedocs.io/
  Repository = https://github.com/jeremyagray/elective

classifiers =
  Development Status :: 1 - Planning
  Environment :: Console
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: User Interfaces

[options]

packages = elective

install_requires =
  toml

tests_require =
  Sphinx
  black
  flake8
  flake8-docstrings
  isort
  pccc
  pre-commit
  pydocstyle
  pytest
  pytest-cov
  tox

[options.entry_points]

console_scripts =
  elective = elective:main
